# cairo-annotations

./: .gitignore  .tool-versions  CHANGELOG.md  Cargo.toml  MAINTAINING.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/cairo-annotations/: Cargo.toml
crates/cairo-annotations/src/: felt_deserialize.rs  lib.rs  map_pcs_to_sierra_statement_ids.rs  trace_data.rs
crates/cairo-annotations/src/annotations/: coverage.rs  debugger.rs  impl_helpers.rs  mod.rs  profiler.rs  traits.rs  type_names.rs
crates/cairo-annotations/src/trace_data/: utils.rs
crates/cairo-annotations/tests/: mod.rs  test_hello.rs
crates/cairo-annotations/tests/data/scarb_template/: Scarb.toml
crates/cairo-annotations/tests/data/scarb_template/src/: lib.cairo
crates/cairo-annotations/tests/expected_output/: map_pcs.txt
crates/cairo-annotations/tests/helpers/: mod.rs  output_same_as_in_file.rs  test_project.rs
crates/cairo-annotations/tests/integration/: coverage_annotations.rs  debugger_annotations.rs  map_pcs_to_sierra_statement_ids.rs  mod.rs  profiler_annotations.rs  trace_data.rs  type_names_annotations.rs
examples/: annotation.json
