[workspace]
resolver = "2"
members = [
    "crates/cairo-annotations",
]

[workspace.package]
version = "0.3.1"
edition = "2024"

authors = ["Software Mansion <contact@swmansion.com>"]
categories = ["development-tools"]
license = "MIT"
keywords = ["cairo-lang", "starknet"]
readme = "README.md"
repository = "https://github.com/software-mansion/cairo-annotations"

[workspace.dependencies]
cairo-lang-sierra-to-casm = "2.12.0-rc.0"
cairo-lang-sierra = "2.12.0-rc.0"
camino = { version = "1.1.9", features = ["serde1"] }
thiserror = "2.0.12"
derive_more = { version = "2.0.1", features = ["add", "add_assign", "mul", "mul_assign", "display"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
assert_fs = "1.1.2"
snapbox = "0.6.21"
strum = "0.27"
strum_macros = "0.27"
regex = "1.11"
