[workspace]
resolver = "2"
members = [
    "crates/cairo-annotations",
]

[workspace.package]
version = "0.7.0"
edition = "2024"

authors = ["Software Mansion <contact@swmansion.com>"]
categories = ["development-tools"]
license = "MIT"
keywords = ["cairo-lang", "starknet"]
readme = "README.md"
repository = "https://github.com/software-mansion/cairo-annotations"

[workspace.dependencies]
cairo-lang-sierra-to-casm = "2.14.1-dev.3"
cairo-lang-sierra = "2.14.1-dev.3"
cairo-lang-sierra-type-size = "2.14.1-dev.3"
starknet-types-core = "0.2.4"# Sequencer dev-v0.18.0 is still on this version
camino = { version = "1.2.2", features = ["serde1"] }
thiserror = "2.0.17"
derive_more = { version = "2.1.1", features = ["add", "add_assign", "mul", "mul_assign", "display"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
assert_fs = "1.1.3"
snapbox = "0.6.23"
strum = "0.27"
strum_macros = "0.27"
regex = "1.12"
