[workspace]
resolver = "2"
members = [
    "crates/cairo-annotations",
]

[workspace.package]
version = "0.7.0"
edition = "2024"

authors = ["Software Mansion <contact@swmansion.com>"]
categories = ["development-tools"]
license = "MIT"
keywords = ["cairo-lang", "starknet"]
readme = "README.md"
repository = "https://github.com/software-mansion/cairo-annotations"

[workspace.dependencies]
cairo-lang-sierra-to-casm = "2.15.0"
cairo-lang-sierra = "2.15.0"
cairo-lang-sierra-type-size = "2.15.0"
starknet-types-core = "1.0.0"
camino = { version = "1.2.2", features = ["serde1"] }
thiserror = "2.0.18"
derive_more = { version = "2.1.1", features = ["add", "add_assign", "mul", "mul_assign", "display"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
assert_fs = "1.1.3"
snapbox = "1.0.0"
strum = "0.27"
strum_macros = "0.27"
regex = "1.12"
