[package]
name = "cairo-annotations"
version.workspace = true
edition.workspace = true

[dependencies]
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-sierra.workspace = true
camino.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_fs.workspace = true
snapbox.workspace = true
