[package]
name = "cairo-annotations"
version.workspace = true
edition.workspace = true

authors.workspace = true
categories.workspace = true
description = "Structured annotations for Cairo"
license.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-sierra.workspace = true
camino.workspace = true
thiserror.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
assert_fs.workspace = true
snapbox.workspace = true
